--- a/app/src/main/res/layout/adapter_chat.xml
+++ b/app/src/main/res/layout/adapter_chat.xml
@@ -25,7 +25,7 @@
             android:textSize="12sp"/>
 
         <TextView
-            android:id="@+id/text_view_message"
+            android:id="@+id/text_view_message_owner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Message Content"
